# quacode

./: CMakeLists.txt  FindGecode.cmake  README  README.md  readme.txt
examples/: baker.cpp  connect-four.cpp  matrix-game.cpp  nim-fibo.cpp  qbf.cpp  qdimacs.cpp  rndQCSP.cpp
privateMisc/: readme.txt  vieux_script_compilation_32_bits.txt  vieux_script_compilation_64_bits.txt
quacode/: flatzinc.hh  qcsp.hh  qspaceinfo.cpp  qspaceinfo.hh  qspaceinfo.hpp
quacode/examples/: baker.cpp  connect-four.cpp  matrix-game.cpp  nim-fibo.cpp  qbf.cpp  qdimacs.cpp
quacode/flatzinc/: ast.hh  conexpr.hh  flatzinc.cpp  fzn-quacode.cpp  lexer.lxx  option.hh  parser.hh  parser.yxx  plugin.hh  registry.cpp  registry.hh  symboltable.hh  varspec.hh
quacode/qint/: qbool.hh  watch.hpp
quacode/qint/branch/: view-values.cpp  view-values.hpp
quacode/qint/qbool/: clause.hpp  eq.hpp  eqv.cpp  eqv.hpp  or.hpp  qbool.cpp  xor.hpp  xorv.hpp
quacode/search/: qdfs.cpp  qdfs.hpp
quacode/search/parallel/: qdfs.cpp  qdfs.hh  qengine.cpp  qengine.hh  qpath.cpp  qpath.hh  qworkdata.hh
quacode/search/sequential/: qdfs.hh  qpath.cpp  qpath.hh
quacode/support/: dynamic-list.hh  log.cpp  log.hh
